# fruit-sorter

./: CMakeLists.txt  README.md  uon_7_26.xml
SOEM/cmake/: soemConfig.cmake
example/: main.cpp
